# term4-kursach

./: AGENTS.md  README.md
.github/workflows/: deploy.yml
docs/: kursach-autogen.md
kursach/: kursach.yaml
kursach/sections/: appendix.yaml  intro.yaml  references.yaml  task02.yaml  task03.yaml  task04.yaml  task05.yaml  task06.yaml  task07.yaml  task08.yaml  task09.yaml  task10.yaml  task11.yaml  task12.yaml  task13.yaml
tasks/02-epidemic-simulation/src/: simulation.cpp
tasks/04-random-walk-2d/src/: point_walk_sim.cpp
tasks/07-complex-walk/qml/: Main.qml
tasks/11-discrete-rv/: CMakeLists.txt
tasks/11-discrete-rv/src/: main.cpp
tasks/12-buffon-needle/src/: main.cpp
website/: index.html
